# licheats

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.txt  pyproject.toml  setup.py  test_client.py  test_module.ipynb  training.ipynb
licheats/: __init__.py  analysis.py  api.py  app.py  lichess.py  schemas.py  settings.py  storage.py
licheats.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
licheats/core/: __init__.py  client.py  games_analizer.py
licheats/data/: __init__.py  ajedrez.db
licheats/data/extract/: __init__.py  lichess_client.py
licheats/data/load/: ajedrez.db  db.py
licheats/data/process/: __init__.py  game_processor.py  player_processor.py
licheats/services/: __init__.py  api_service.py  data_service.py  stats_service.py
licheats/shared/: __init__.py  constants.py  games_analizer.py  models.py  stat_visualizer.py  statistics.py  utils.py
lichess-assistant-extension/backend/: script.py  server.py
lichess-assistant-extension/chrome/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
resources/: chess_dataset.pkl
resources/AlphaZero Games/: game1.pgn  game10.pgn  game11.pgn  game2.pgn  game3.pgn  game4.pgn  game5.pgn  game7.pgn  game8.pgn  game9.pgn
scripts/: perf_probe.py
tests/: test_api.py  test_client.py  test_extension_static.py  test_lichess_gateway.py  test_services.py  test_settings.py  test_storage_analysis.py
tests/fixtures/: games.ndjson  player.json
web-extension/: background.js  content.js  manifest.json
web-extension/simple-chrome-extension-master/: popup.js
(+1 files in other folders)
