[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "licheats"
version = "0.2.0"
description = "Local Lichess opponent analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Licheats maintainers" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "platformdirs>=4.2",
  "pydantic>=2.7",
  "python-chess>=1.999",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
licheats-api = "licheats.api:main"

[tool.setuptools.packages.find]
include = ["licheats*"]
exclude = ["tests*", "lichess-assistant-extension*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: opt-in tests that call the live Lichess API",
]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
